spacing. fix keys

--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -11,5 +11,5 @@
 .statDefinitionGrid {
   display: grid;
   grid-template-columns: repeat(4, max-content);
-  gap: 10px;
+  gap: 30px;
 }
